added user register and logout functionality

--- a/Identity.API/Components/_Imports.razor
+++ b/Identity.API/Components/_Imports.razor
@@ -9,12 +9,15 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.JSInterop
 @using Identity.API
-@using Identity.API.Components
 @using Identity.API.Models
-@using Identity.API.Services
+@using Identity.API.Models.Data
+@using Identity.API.Models.Input
+@using Identity.API.Models.View
+@using Identity.API.Components
 @using Identity.API.Extensions
+@using Identity.API.Services
 @using MudBlazor
