--- a/BlazorApp/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/BlazorApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@inject LogOutService LogOutService
+@inject NavigationManager Nav
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +9,18 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <a href="https://learn.microsoft.com/aspnet/core/" class="btn-link" target="_blank">About</a>
+            <AuthorizeView>
+                <Authorized>
+                    <form method="post" action="user/logout" @formname="logout" @onsubmit="LogOutAsync">
+                        <AntiforgeryToken />
+                        <button type="submit" class="btn btn-link">Logout</button>
+                    </form>
+                </Authorized>
+                <NotAuthorized>
+                    <a aria-label="log-in" href="@Pages.LogIn.Url(Nav)" class="btn-link">Login</a>
+                </NotAuthorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
@@ -21,3 +34,11 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+@code {
+    [CascadingParameter]
+    public HttpContext? HttpContext { get; set; }
+
+    private Task LogOutAsync()
+    => LogOutService.LogOutAsync(HttpContext!);
+}
