--- a/BlazorApp/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/BlazorApp/Components/_Imports.razor
@@ -1,6 +1,8 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using System.Security.Principal
 @using Microsoft.AspNetCore.Identity;
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
