--- a/Identity.API/Views/Account/Register.cshtml
+++ b/Identity.API/Views/Account/Register.cshtml
@@ -1,1 +1,56 @@
-﻿@
+﻿@model string
+
+<div class="container h-100 d-flex justify-content-center align-items-center">
+    <div class="card w-50 h-50 pt-3">
+        <form asp-route="Register" class="needs-validation flex-grow-1">
+            <div class="card-body h-100 d-flex flex-column justify-content-between">
+                <div>
+                    <div class="row mb-3">
+                        <h3 class="headline-2 col-md-12">Register</h3>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                            <input class="form-control" placeholder="First Name" autofocus>
+                            <span class="text-danger" hidden>Please provide your first name</span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input class="form-control" placeholder="Last Name" autocomplete="off">
+                            <span class="text-danger" hidden>Please provide your last name</span>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-12">
+                            <input class="form-control" placeholder="Username" autocomplete="off">
+                            <span class="text-danger" hidden>Please enter a username</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-12">
+                            <input class="form-control" placeholder="Email" autocomplete="off">
+                            <span class="text-danger" hidden>Please enter a valid email address</span>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group col-md-6">
+                            <input class="form-control" placeholder="Password" autofocus>
+                            <span class="text-danger" hidden>Enter your password</span>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <input class="form-control" placeholder="Password" autocomplete="off">
+                            <span class="text-danger" hidden>Repeat your password</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12 d-flex justify-content-end align-items-center">
+                        <button class="btn btn-primary" name="button" value="login">Register Account</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
