--- a/Identity.API/Views/Home/Index.cshtml
+++ b/Identity.API/Views/Home/Index.cshtml
@@ -1,13 +1,28 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@inject IConfiguration config
+
 @{
     ViewData["Title"] = "Identity Server Home | Lets Game";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Home</h1>
+<div class="h-100">
+    <div class="container h-100 d-flex justify-content-center align-items-center">
+        <div class="card w-50 h-50">
+            <div class="card-header">
+                <h3 class="mb-4">Lets Game Identity</h3>
+                <p>This is the homepage for the <a class="btn-link-primary" href="@config.GetRequiredValue("WebAppClient")">Lets Game</a> authentication and identity service.</p>
+            </div>
+            <div class="card-body">
+                <div class="pt-3 pb-3">
+                    <h2 class="mb-4">Login</h2>
+                    <p>Click <a class="btn-link-primary" asp-action="login" asp-controller="account">here</a> to login to your account</p>
+                </div>
 
-<div class="alert alert-primary">
-    Welcome to the home page
+                <div class="pb-3">
+                    <h2 class="mb-4">Sign Up</h2>
+                    <p>Don't have an account? Sign up <a class="btn-link-primary" asp-action="register" asp-controller="account">here</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
