--- a/Identity.API/Views/_ViewImports.cshtml
+++ b/Identity.API/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 @using Identity.API.Models;
+@using Identity.API.Models.View;
+@using Identity.API.Models.Data;
+@using Identity.API.Models.Input;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
