Updated the Blazor App to support auth workflow and default layout. Added Radzen.

--- a/BlazorApp/BlazorApp/Components/App.razor
+++ b/BlazorApp/BlazorApp/Components/App.razor
@@ -9,12 +9,17 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlazorApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+
+    <!-- Radzen Theme-->
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+
+    <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
