--- a/BlazorApp/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/BlazorApp/Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Http
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
@@ -15,3 +16,5 @@
 @using BlazorApp.Components
 @using BlazorApp.Models
 @using BlazorApp.Services
+@using Radzen
+@using Radzen.Blazor
