--- a/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
@@ -1,34 +1,18 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorApp</a>
-    </div>
-</div>
+﻿
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+<RadzenSidebar Responsive="false" Style="@(SidebarExpanded ? "" : "width: max-content")">
+    <RadzenPanelMenu DisplayStyle="@(SidebarExpanded ? MenuItemDisplayStyle.IconAndText : MenuItemDisplayStyle.Icon)" ShowArrow="false">
+        <RadzenPanelMenuItem Text="Dashboard" Path="" Icon="dashboard" />
+        <AuthorizeView>
+            <Authorized>
+                <RadzenPanelMenuItem Text="Events" Path="events" Icon="event" />
+            </Authorized>
+        </AuthorizeView>
+        <RadzenPanelMenuItem Text="Counter" Path="counter" Icon="add" />
+    </RadzenPanelMenu>
+</RadzenSidebar>
 
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="events">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Events
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="todo">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> ToDos
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
+@code {
+    [Parameter]
+    public bool SidebarExpanded { get; set; }
+}
