--- a/BlazorApp/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/BlazorApp/wwwroot/app.css
@@ -42,10 +42,34 @@ h1:focus {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
 
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
+}
+
+.rz-button.rz-link {
+    background: none !important;
+}
+
+.rz-button.rz-link .rz-button-text {
+    color: var(--rz-link-color);
+}
+
+.rz-button.rz-link:hover .rz-button-text {
+    text-decoration: underline !important;
+}
+
+.rz-panel-titlebar-toggler .rzi-minus:before {
+    content: 'announcement' !important;
+}
+
+.rz-panel-titlebar-toggler .rzi-plus:before {
+    content: 'announcement' !important;
+}
+
+a.rz-button.rz-light:hover {
+    color: var(--rz-text-color) !important;
 }
