--- a/BlazorApp/BlazorApp/Components/App.razor
+++ b/BlazorApp/BlazorApp/Components/App.razor
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="BlazorApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <!-- Radzen Theme-->
-    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <!-- Mud Blazor Themme-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
@@ -19,7 +20,7 @@
 <body>
     <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
