--- a/BlazorApp/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/BlazorApp/Components/_Imports.razor
@@ -12,9 +12,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorApp
-@using BlazorApp.Client
 @using BlazorApp.Components
+@using BlazorApp.Components.Events
+@using BlazorApp.Components.Games
 @using BlazorApp.Models
 @using BlazorApp.Services
-@using Radzen
-@using Radzen.Blazor
+@using BlazorApp.Extensions
+@using MudBlazor
