New grid layout, form validators, wizard form components, event creation, other tweaks

--- a/BlazorApp/BlazorApp/Components/App.razor
+++ b/BlazorApp/BlazorApp/Components/App.razor
@@ -17,7 +17,7 @@
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
 
-<body>
+<body class="h-100" style="overflow: hidden">
     <Routes @rendermode="InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
