--- a/BlazorApp/BlazorApp/Components/Pages/Events.razor
+++ b/BlazorApp/BlazorApp/Components/Pages/Events.razor
@@ -1,5 +1,8 @@
 ﻿@page "/events"
 @inject CoreApiClient EventsClient
+@inject ClientTest TestClient;
+@using LetsGame.Common.Data.Entities.Events;
+
 @attribute [StreamRendering]
 @attribute [Authorize]
 
