--- a/BlazorApp/BlazorApp/Components/_Imports.razor
+++ b/BlazorApp/BlazorApp/Components/_Imports.razor
@@ -12,10 +12,15 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorApp
+@using BlazorApp.Services
+@using BlazorApp.Extensions
 @using BlazorApp.Components
 @using BlazorApp.Components.Events
 @using BlazorApp.Components.Games
-@using BlazorApp.Models
-@using BlazorApp.Services
-@using BlazorApp.Extensions
+@using LetsGame.Common.Data.Entities.Users
+@using BlazorApp.Components.Utility
+@using BlazorApp.Components.Users
+@using BlazorApp.Utilities
+@using LetsGame.Common.Clients;
 @using MudBlazor
+@using BlazorApp.Utilities.Enums;
