--- a/BlazorApp/BlazorApp/wwwroot/app.css
+++ b/BlazorApp/BlazorApp/wwwroot/app.css
@@ -92,6 +92,10 @@
     height: 100% !important;
 }
 
+w-100 {
+    width: 100% !important;
+}
+
 .width-full {
     width: 100% !important;
 }
@@ -121,4 +125,123 @@ a.mud-button-light:hover {
 .hide-scroll {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
+}
+
+
+
+/* Lets Game Grid */
+.lg-grid {
+    display: grid;
+    width: 100%;
+    height: 100%;
+}
+
+.lg-grid-col-1 {
+    grid-template-columns: repeat(1, 1fr);
+}
+.lg-grid-col-2 {
+    grid-template-columns: repeat(2, 1fr);
+}
+.lg-grid-col-3 {
+    grid-template-columns: repeat(3, 1fr);
+}
+.lg-grid-col-4 {
+    grid-template-columns: repeat(4, 1fr);
+}
+.lg-grid-col-5 {
+    grid-template-columns: repeat(5, 1fr);
+}
+.lg-grid-col-6 {
+    grid-template-columns: repeat(6, 1fr);
+}
+.lg-grid-col-7 {
+    grid-template-columns: repeat(7, 1fr);
+}
+.lg-grid-col-8 {
+    grid-template-columns: repeat(8, 1fr);
+}
+.lg-grid-col-9 {
+    grid-template-columns: repeat(9, 1fr);
+}
+.lg-grid-col-10 {
+    grid-template-columns: repeat(10, 1fr);
+}
+.lg-grid-col-11 {
+    grid-template-columns: repeat(11, 1fr);
+}
+.lg-grid-col-12 {
+    grid-template-columns: repeat(12, 1fr);
+}
+.lg-grid-col-gap-1 {
+    grid-column-gap: 0.2rem;
+}
+.lg-grid-col-gap-2 {
+    grid-column-gap: 0.75rem;
+}
+.lg-grid-col-gap-3 {
+    grid-column-gap: 1rem;
+}
+.lg-grid-col-gap-4 {
+    grid-column-gap: 1.5rem;
+}
+.lg-grid-col-gap-5 {
+    grid-column-gap: 2rem;
+}
+.lg-grid-col-gap-6 {
+    grid-column-gap: 3rem;
+}
+
+.lg-grid-row-1 {
+    grid-template-rows: repeat(1, 1fr);
+}
+.lg-grid-row-2 {
+    grid-template-rows: repeat(2, 1fr);
+}
+.lg-grid-row-3 {
+    grid-template-rows: repeat(3, 1fr);
+}
+.lg-grid-row-4 {
+    grid-template-rows: repeat(4, 1fr);
+}
+.lg-grid-row-5 {
+    grid-template-rows: repeat(5, 1fr);
+}
+.lg-grid-row-6 {
+    grid-template-rows: repeat(6, 1fr);
+}
+.lg-grid-row-7 {
+    grid-template-rows: repeat(7, 1fr);
+}
+.lg-grid-row-8 {
+    grid-template-rows: repeat(8, 1fr);
+}
+.lg-grid-row-9 {
+    grid-template-rows: repeat(9, 1fr);
+}
+.lg-grid-row-10 {
+    grid-template-rows: repeat(10, 1fr);
+}
+.lg-grid-row-11 {
+    grid-template-rows: repeat(11, 1fr);
+}
+.lg-grid-row-12 {
+    grid-template-rows: repeat(12, 1fr);
+}
+.lg-grid-row-gap-1 {
+    grid-row-gap: 0.2rem;
+}
+.lg-grid-row-gap-2 {
+    grid-row-gap: 0.75rem;
+}
+.lg-grid-row-gap-3 {
+    grid-row-gap: 1rem;
+}
+.lg-grid-row-gap-4 {
+    grid-row-gap: 1.5rem;
+}
+.lg-grid-row-gap-5 {
+    grid-row-gap: 2rem;
+}
+.lg-grid-row-gap-6 {
+    grid-row-gap: 3rem;
 }
